# cmake-bundle_static_library

./: .gitignore  LICENSE  README.md  bundle_static_library.cmake
test/: CMakeLists.txt  lib_a.h  lib_b.h  lib_c.h  lib_e.cpp  lib_f.cpp  lib_g.cpp  lib_g.h  lib_h.cpp  lib_h.h  run_tests.sh  test_basic.cpp  test_dependencies.cpp  test_multiple_h.cpp  test_transitive.cpp
test/c/: CMakeLists.txt  c_lib_a.c  c_lib_a.h  c_lib_b.c  c_lib_b.h  run_tests.sh  test_c_bundled.c
test/cpp/: CMakeLists.txt  README.md  lib_a.cpp  lib_b.cpp  lib_c.cpp  lib_d.cpp  lib_d.h  lib_e.h  lib_f.h  test_multiple_g.cpp
test/install/: CMakeLists.txt  mylib_a.cpp  mylib_a.h  mylib_b.cpp  run_test.sh
test/install/install_dir/include/: mylib_b.h
test/subdirs/: CMakeLists.txt  run_tests.sh
test/subdirs/subdir_a/: lib2.cpp  lib2.h
test/subdirs/subdir_b/: CMakeLists.txt  test_subdir_b.cpp
test_c/: CMakeLists.txt
test_subdirs/: CMakeLists.txt
test_subdirs/subdir_a/: CMakeLists.txt  lib1.cpp  lib1.h  test_subdir_a.cpp
test_subdirs/subdir_b/: lib1.cpp  lib1.h  lib2.cpp  lib2.h
